# d3-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
d3_mcp_server/: __init__.py  cache.py  examples.py  modules.py  search.py  server.py  sync.py
tests/: test_cache.py  test_examples.py  test_search.py  test_server.py
